--- a/style.css
+++ b/style.css
@@ -54,12 +54,14 @@ input#sub:hover{
     left: 174px;
     position: absolute;
     top: 75px;
+	transition: 150ms ease-in;
 }
 .lefteye{
 	width: 25px;
     left: 110px;
     position: absolute;
     top: 75px;
+	transition: 150ms ease-in;
 }
 .bob{
 	width:150px;
